--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -51,22 +51,22 @@ header:
       # @end locale config
     url: /about.html
 
-  - titles:
-      # @start locale config
-      en      : &EN       BuyMeACoffee ☕
-      en-GB   : *EN
-      en-US   : *EN
-      en-CA   : *EN
-      en-AU   : *EN
-      # @end locale config
-    url: https://www.buymeacoffee.com/fareedfauzi
+  # - titles:
+  #     # @start locale config
+  #     en      : &EN       BuyMeACoffee ☕
+  #     en-GB   : *EN
+  #     en-US   : *EN
+  #     en-CA   : *EN
+  #     en-AU   : *EN
+  #     # @end locale config
+  #   url: https://www.buymeacoffee.com/fareedfauzi
 
-  - titles:
-      # @start locale config
-      en      : &EN       GitBooks 📘
-      en-GB   : *EN
-      en-US   : *EN
-      en-CA   : *EN
-      en-AU   : *EN
-      # @end locale config
-    url: https://fareedfauzi.gitbook.io
+  # - titles:
+  #     # @start locale config
+  #     en      : &EN       GitBooks 📘
+  #     en-GB   : *EN
+  #     en-US   : *EN
+  #     en-CA   : *EN
+  #     en-AU   : *EN
+  #     # @end locale config
+  #   url: https://fareedfauzi.gitbook.io
