--- a/_config.yml
+++ b/_config.yml
@@ -35,13 +35,13 @@ timezone: NL # see https://en.wikipedia.org/wiki/List_of_tz_database_time_zones 
 ##############################
 author:
   type      : # "person" (default), "organization"
-  name      : r00tkie
+  name      : hideandsec
   url       :
   avatar    : "/profile.png" # path or url of avatar image (square)
   bio       : Researcher | Engineer | Tinkerer 
   email     :
   facebook  : # "user_name" the last part of your profile url, e.g. https://www.facebook.com/user_name
-  twitter   : r00tkie # "user_name" the last part of your profile url, e.g. https://twitter.com/user_name
+  twitter   : hideandsec # "user_name" the last part of your profile url, e.g. https://twitter.com/user_name
   weibo     : # "user_id"   the last part of your profile url, e.g. https://www.weibo.com/user_id/profile?...
   googleplus: # "user_id"   the last part of your profile url, e.g. https://plus.google.com/u/0/user_id
   telegram  : # "user_name" the last part of your profile url, e.g. https://t.me/user_name
