--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -16,7 +16,7 @@ menu__settings:
     - title: 'Projects'
       url: '/projects/'
     - title: 'About'
-      url: '/about/'
+      url: '/about'
     #- title: 'Contact'
     #  url: '/contact'
     # - title: 'Pages'
@@ -57,8 +57,8 @@ While I mostly like to write about Active Directory, Windows Exploitation and Cl
 #     Here I'm going to share my thoughts, my projects and my experiences.
      
 #     "
-  image: '/images/me.jpg'
-  avatar: '/images/me.jpg'
+  image: '/images/me.png'
+  avatar: '/images/me.png'
   button__text: See my work
 
 
